--- a/laboratorio.html
+++ b/laboratorio.html
@@ -43,7 +43,7 @@
 	 	</ul>
 	 		
 
-	<p><strong class="r1">la libertad para distribuir</strong> <em>(libertades 2 y 3)</em> significa que usted tiene la libertad para redistribuir copias con o sin modificaciones, ya sea gratuitamente o cobrando una tarifa por la distribucion, a cualquier en cualquier parte. Ser libre de hacer eso significa, entre otras cosas, que no <s>tiene</s> debe que pedir ni pagar ningun permmiso para hacerlo </p>  
+	<p>la libertad para distribuir <em>(libertades 2 y 3)</em> significa que usted tiene la libertad para redistribuir copias con o sin modificaciones, ya sea gratuitamente o cobrando una tarifa por la distribucion, a cualquier en cualquier parte. Ser libre de hacer eso significa, entre otras cosas, que no <s>tiene</s> debe que pedir ni pagar ningun permmiso para hacerlo </p>  
 
 	<p class="blue">mascotas del mundo del sotfware libre</p>  
 
