--- a/laboratorio.html
+++ b/laboratorio.html
@@ -47,6 +47,24 @@
 
 	<p class="blue">mascotas del mundo del sotfware libre</p>  
 
+<table border=1 width="100%" bgcolor="yellow">
+
+<tr>
+<td bgcolor="#A5FF33">Ñu</td><td>un Ñu es un animal representativo del proyecto</td>
+<tr>
+<td bgcolor="#A5FF33">Gimp</td><td>Wilber es la mascota de</td>
+<tr>
+<td bgcolor="#A5FF33">Tux</td><td>la idea de Tux surgio del propio</td>
+<tr>
+<td bgcolor="#A5FF33">Mono</td><td>Mono es tanto el nombre como el animal</td>
+<tr>
+<td bgcolor="#A5FF33">Perl</td><td>El camello es la imagen del lenguaje</td>
+<tr>
+<td bgcolor="#A5FF33">Mysql</td><td>El delfin que es parte del logo de Mysql</td>
+<tr>
+<td bgcolor="#A5FF33">Surse</td><td>Greko; asi se llama el simpatico</td>
+
+</table>
 
 
 
