--- a/laboratorio.html
+++ b/laboratorio.html
@@ -50,19 +50,25 @@
 <table border=1 width="100%" bgcolor="yellow">
 
 <tr>
-<td bgcolor="#A5FF33">Ñu</td><td>un Ñu es un animal representativo del proyecto</td>
+	<td bgcolor="#A5FF33" class="programs">Ñu <br><img src="img/Ñu.jpg" width="200px"/></td><td>un Ñu es un animal representativo del proyecto GNU ya que GNU significa <strong class="ÑU">"Ñu"</strong>en ingles.El nombre GNU no se adoptp porque a la persona que comenzo el proyecto <i class="i">(Richard Stallman)</i> le gustase particularmente este animal sino porque GNU es un acronimo recursivo que quiere decir <strong class="gn">"GNU's Not Unix."</strong></td>
+	
 <tr>
-<td bgcolor="#A5FF33">Gimp</td><td>Wilber es la mascota de</td>
+
 <tr>
-<td bgcolor="#A5FF33">Tux</td><td>la idea de Tux surgio del propio</td>
+<td  bgcolor="#A5FF33" class="programs">Gimp<img src="img/Gim.jpg" width="200px"/></td><td> <strong class="i">Wilber es la mascota de GIMP</strong><i>(GNU Image Manipulation Program)</i> fue creada en 1997 por Thomas Knosman y Wilber es un...gimp. A menudo se confunde con un zorro o un raton pero segun su creador, Wilber es simplemente un gimp.</td>
 <tr>
-<td bgcolor="#A5FF33">Mono</td><td>Mono es tanto el nombre como el animal</td>
+<td bgcolor="#A5FF33" class="programs">Tux<img src="img/Tux.jpg " width="200px"/></td><td>la idea de <strong class="i">Tux</strong>surgio del propio <i>linus Torvalds</i>, segun cuenta, de pequeño le mordio un pingüino en Australia  y desde entonces le parecio un animal simnpatico. No hay un origen claro del nombre <strong class="gn">"Tux"</strong>; algunos dicen que provienen del ingles Tuxedo que significa esmoquin (siempre se le han dicho a los pinüinos van de esmoquin) y otros dicen que el nombre es una mezcla de Torvald con Unix.</td>
 <tr>
-<td bgcolor="#A5FF33">Perl</td><td>El camello es la imagen del lenguaje</td>
+<td bgcolor="#A5FF33" class="programs">Mono<img src="img/Mono.jpg" width="200px"/></td><td>Mono es tanto el nombre como el animal representativo como de un proyecto que pretende ser una implementacion <i>libre de la plataforma.Net.</i> </td>
 <tr>
-<td bgcolor="#A5FF33">Mysql</td><td>El delfin que es parte del logo de Mysql</td>
+<td bgcolor="#A5FF33" class="programs">Perl<img src="img/Perl.jpg" width="200px"/></td><td> <strong class="i">El camello</strong>es la imagen del lenguaje Perl desde que apareciese por primera vez en el libro <strong class="gn">"Programing Perl"</strong>, curiosamente, el camello Perl <strong class="i">tienen derechos de autor (La editorial O'Reilly) </strong></td>
 <tr>
-<td bgcolor="#A5FF33">Surse</td><td>Greko; asi se llama el simpatico</td>
+<td bgcolor="#A5FF33" class="programs">Mysql<img src="img/Mysql.jpg" width="200px"/></td><td>El delfin que es <strong class="i">parte del logo de Mysql se llama Sakila.</strong> Segun los creadores de Mysql, este delfin representa los valores de la compañia y de la base de datos:<i>rapidez, precision, potencia y naturalidad.</i></td>
+<tr>
+<td bgcolor="#A5FF33" class="programs">Surse<img src="img/Suse.jpg" width="200px"/></td><td>Greko; asi se llama el simpatico camaleon que es la mascota de la compañia alemana Suse. El Nombre fue elegido tras un concursoen el que partciparon miles de personasy proviene del termino Geek <br><br><br>
+	<a href="(http://es.wikipedia.org/wiki/Geek)"><i>(http://es.wikipedia.org/wiki/Geek)</i></a></br>
+<br>que se podria traducir al castellano como friki.<br>
+</td>
 
 </table>
 
